--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
-  "name": "event-app202407",
+  "name": "react-study202406",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.3",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.2.2",
+    "sass": "^1.77.6",
+    "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
