--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy React App to S3
 on:
   push:
     branches:
-      - main  # main 브랜치에 푸시될 때 실행
+      - master  # main 브랜치에 푸시될 때 실행
 
 jobs:
   build-and-deploy:
